[package]
name = "hash-visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
fnv = "1.0.7"
bitvec = "1.0.1"
ring = "0.16.20"
integer-sqrt = "0.1.5"
imageproc = "0.23.0"
rusttype = "0.9.3"